[tool.poetry]
name = "microgrid_energy_management"
version = "0.1.0"
description = ""
authors = ["batbat99 <hbatayneh@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
